# treads

./: .gitignore  GUIDE.md  MUJOCO_LOG.TXT  chain_track.py  linkage.md  pyproject.toml  tank.py  tank.xml  tank_4spr.py
.claude/projects/-home-sman-Work-CMU-Research-track-synthesis/memory/: MEMORY.md  project_chain_track_design.md
.context/: chain_track_design.md  chain_track_lessons.md
.old/: MUJOCO_LOG.TXT  approach_a_coupler_curve.csv  approach_a_pylinkage.py  approach_b_scipy.py  approach_c_pyslvs.py  chain_track.py  chain_track.xml  generate_tank.py  generate_track.py  generate_track_xml.py  linkage_mujoco.xml  main.py  run_linkage.py  run_slider_crank.py  run_tank.py  run_tank_track.py  slider_crank_mujoco.xml  stadium.py  starter.md  tank.py  tank.xml  tank_track.xml  tank_track_mujoco.xml
examples/: single_track.py
memory/: feedback_no_gif.md
shared/: __init__.py  config.py  engagement.py  geometry.py  simulation.py  xml_builder.py
tank_3spr/: __main__.py
tank_4spr/: __main__.py
