[project]
name = "track-synthesis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "imageio[ffmpeg]>=2.37.3",
    "matplotlib>=3.10.8",
    "mujoco>=3.6.0",
    "numpy>=2.4.3",
    "pylinkage>=0.7.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
